--- a/api_0/api_0.vcxproj
+++ b/api_0/api_0.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{C59E1A88-0259-4665-988C-716AA21861FB}</ProjectGuid>
     <RootNamespace>api0</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>api_0</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
